// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SocialIcon component should render light social icon 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    disabled={false}
    onLongPress={[Function]}
    onPress={[Function]}
    style={
        Array [
            false,
            Object {
              "alignItems": "center",
              "borderRadius": 30,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 7,
            },
            false,
            false,
            false,
            Object {
              "backgroundColor": "#02b875",
            },
            Object {
              "backgroundColor": "white",
            },
            undefined,
          ]
    }
    underlayColor="white"
>
    <View
        style={
            Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
        }
    >
        <Icon
            allowFontScaling={false}
            color="#02b875"
            name="medium"
            size={24}
            style={
                Array [
                    undefined,
                  ]
            }
        />
    </View>
</View>,
  "nodes": Array [
    <View
      disabled={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
            Array [
                  false,
                  Object {
                    "alignItems": "center",
                    "borderRadius": 30,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "margin": 7,
                  },
                  false,
                  false,
                  false,
                  Object {
                    "backgroundColor": "#02b875",
                  },
                  Object {
                    "backgroundColor": "white",
                  },
                  undefined,
                ]
      }
      underlayColor="white"
>
      <View
            style={
                  Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      }
            }
      >
            <Icon
                  allowFontScaling={false}
                  color="#02b875"
                  name="medium"
                  size={24}
                  style={
                        Array [
                              undefined,
                            ]
                  }
            />
      </View>
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <SocialIcon
        button={false}
        iconColor="white"
        iconSize={24}
        light={true}
        raised={false}
        type="medium"
/>,
      "_debugID": 5,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "button": false,
          "iconColor": "white",
          "iconSize": 24,
          "light": true,
          "raised": false,
          "type": "medium",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 3,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          disabled={false}
          onLongPress={[Function]}
          onPress={[Function]}
          style={
                    Array [
                              false,
                              Object {
                                "alignItems": "center",
                                "borderRadius": 30,
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "margin": 7,
                              },
                              false,
                              false,
                              false,
                              Object {
                                "backgroundColor": "#02b875",
                              },
                              Object {
                                "backgroundColor": "white",
                              },
                              undefined,
                            ]
          }
          underlayColor="white"
>
          <View
                    style={
                              Object {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                      }
                    }
          >
                    <Icon
                              allowFontScaling={false}
                              color="#02b875"
                              name="medium"
                              size={24}
                              style={
                                        Array [
                                                  undefined,
                                                ]
                              }
                    />
          </View>
</View>,
        "_debugID": 6,
        "_renderedOutput": <View
          disabled={false}
          onLongPress={[Function]}
          onPress={[Function]}
          style={
                    Array [
                              false,
                              Object {
                                "alignItems": "center",
                                "borderRadius": 30,
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "margin": 7,
                              },
                              false,
                              false,
                              false,
                              Object {
                                "backgroundColor": "#02b875",
                              },
                              Object {
                                "backgroundColor": "white",
                              },
                              undefined,
                            ]
          }
          underlayColor="white"
>
          <View
                    style={
                              Object {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                      }
                    }
          >
                    <Icon
                              allowFontScaling={false}
                              color="#02b875"
                              name="medium"
                              size={24}
                              style={
                                        Array [
                                                  undefined,
                                                ]
                              }
                    />
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <SocialIcon
    button={false}
    iconColor="white"
    iconSize={24}
    light={true}
    raised={false}
    type="medium"
/>,
}
`;

exports[`SocialIcon component should render social icon button 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    disabled={false}
    onLongPress={[Function]}
    onPress={[Function]}
    style={
        Array [
            Object {
              "shadowColor": "rgba(0,0,0, .4)",
              "shadowOffset": Object {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
            },
            Object {
              "alignItems": "center",
              "borderRadius": 30,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 7,
            },
            Object {
              "paddingBottom": 14,
              "paddingTop": 14,
            },
            false,
            false,
            Object {
              "backgroundColor": "#3b5998",
            },
            undefined,
            undefined,
          ]
    }
    underlayColor="#3b5998"
>
    <View
        style={
            Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
        }
    >
        <Icon
            allowFontScaling={false}
            color="white"
            name="facebook"
            size={24}
            style={
                Array [
                    undefined,
                  ]
            }
        />
        <TextElement
            style={
                Array [
                    Object {
                      "color": "white",
                      "fontWeight": "bold",
                      "marginLeft": 15,
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ]
            }
        >
            Sign In With Facebook
        </TextElement>
    </View>
</View>,
  "nodes": Array [
    <View
      disabled={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
            Array [
                  Object {
                    "shadowColor": "rgba(0,0,0, .4)",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": 1,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 1,
                  },
                  Object {
                    "alignItems": "center",
                    "borderRadius": 30,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "margin": 7,
                  },
                  Object {
                    "paddingBottom": 14,
                    "paddingTop": 14,
                  },
                  false,
                  false,
                  Object {
                    "backgroundColor": "#3b5998",
                  },
                  undefined,
                  undefined,
                ]
      }
      underlayColor="#3b5998"
>
      <View
            style={
                  Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      }
            }
      >
            <Icon
                  allowFontScaling={false}
                  color="white"
                  name="facebook"
                  size={24}
                  style={
                        Array [
                              undefined,
                            ]
                  }
            />
            <TextElement
                  style={
                        Array [
                              Object {
                                "color": "white",
                                "fontWeight": "bold",
                                "marginLeft": 15,
                              },
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                            ]
                  }
            >
                  Sign In With Facebook
            </TextElement>
      </View>
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <SocialIcon
        button={true}
        iconColor="white"
        iconSize={24}
        raised={true}
        title="Sign In With Facebook"
        type="facebook"
/>,
      "_debugID": 7,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "button": true,
          "iconColor": "white",
          "iconSize": 24,
          "raised": true,
          "title": "Sign In With Facebook",
          "type": "facebook",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 4,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          disabled={false}
          onLongPress={[Function]}
          onPress={[Function]}
          style={
                    Array [
                              Object {
                                "shadowColor": "rgba(0,0,0, .4)",
                                "shadowOffset": Object {
                                  "height": 1,
                                  "width": 1,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 1,
                              },
                              Object {
                                "alignItems": "center",
                                "borderRadius": 30,
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "margin": 7,
                              },
                              Object {
                                "paddingBottom": 14,
                                "paddingTop": 14,
                              },
                              false,
                              false,
                              Object {
                                "backgroundColor": "#3b5998",
                              },
                              undefined,
                              undefined,
                            ]
          }
          underlayColor="#3b5998"
>
          <View
                    style={
                              Object {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                      }
                    }
          >
                    <Icon
                              allowFontScaling={false}
                              color="white"
                              name="facebook"
                              size={24}
                              style={
                                        Array [
                                                  undefined,
                                                ]
                              }
                    />
                    <TextElement
                              style={
                                        Array [
                                                  Object {
                                                    "color": "white",
                                                    "fontWeight": "bold",
                                                    "marginLeft": 15,
                                                  },
                                                  undefined,
                                                  undefined,
                                                  undefined,
                                                  undefined,
                                                ]
                              }
                    >
                              Sign In With Facebook
                    </TextElement>
          </View>
</View>,
        "_debugID": 8,
        "_renderedOutput": <View
          disabled={false}
          onLongPress={[Function]}
          onPress={[Function]}
          style={
                    Array [
                              Object {
                                "shadowColor": "rgba(0,0,0, .4)",
                                "shadowOffset": Object {
                                  "height": 1,
                                  "width": 1,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 1,
                              },
                              Object {
                                "alignItems": "center",
                                "borderRadius": 30,
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "margin": 7,
                              },
                              Object {
                                "paddingBottom": 14,
                                "paddingTop": 14,
                              },
                              false,
                              false,
                              Object {
                                "backgroundColor": "#3b5998",
                              },
                              undefined,
                              undefined,
                            ]
          }
          underlayColor="#3b5998"
>
          <View
                    style={
                              Object {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                      }
                    }
          >
                    <Icon
                              allowFontScaling={false}
                              color="white"
                              name="facebook"
                              size={24}
                              style={
                                        Array [
                                                  undefined,
                                                ]
                              }
                    />
                    <TextElement
                              style={
                                        Array [
                                                  Object {
                                                    "color": "white",
                                                    "fontWeight": "bold",
                                                    "marginLeft": 15,
                                                  },
                                                  undefined,
                                                  undefined,
                                                  undefined,
                                                  undefined,
                                                ]
                              }
                    >
                              Sign In With Facebook
                    </TextElement>
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <SocialIcon
    button={true}
    iconColor="white"
    iconSize={24}
    raised={true}
    title="Sign In With Facebook"
    type="facebook"
/>,
}
`;

exports[`SocialIcon component should render social icon button 2`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    disabled={false}
    onLongPress={[Function]}
    onPress={[Function]}
    style={
        Array [
            Object {
              "shadowColor": "rgba(0,0,0, .4)",
              "shadowOffset": Object {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
            },
            Object {
              "alignItems": "center",
              "borderRadius": 30,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 7,
            },
            Object {
              "paddingBottom": 14,
              "paddingTop": 14,
            },
            false,
            false,
            Object {
              "backgroundColor": "#3b5998",
            },
            undefined,
            undefined,
          ]
    }
    underlayColor="#3b5998"
>
    <View
        style={
            Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
        }
    >
        <Icon
            allowFontScaling={false}
            color="white"
            name="facebook"
            size={24}
            style={
                Array [
                    undefined,
                  ]
            }
        />
        <TextElement
            style={
                Array [
                    Object {
                      "color": "white",
                      "fontWeight": "bold",
                      "marginLeft": 15,
                    },
                    undefined,
                    undefined,
                    undefined,
                    undefined,
                  ]
            }
        >
            Sign In With Facebook
        </TextElement>
    </View>
</View>,
  "nodes": Array [
    <View
      disabled={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
            Array [
                  Object {
                    "shadowColor": "rgba(0,0,0, .4)",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": 1,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 1,
                  },
                  Object {
                    "alignItems": "center",
                    "borderRadius": 30,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "margin": 7,
                  },
                  Object {
                    "paddingBottom": 14,
                    "paddingTop": 14,
                  },
                  false,
                  false,
                  Object {
                    "backgroundColor": "#3b5998",
                  },
                  undefined,
                  undefined,
                ]
      }
      underlayColor="#3b5998"
>
      <View
            style={
                  Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      }
            }
      >
            <Icon
                  allowFontScaling={false}
                  color="white"
                  name="facebook"
                  size={24}
                  style={
                        Array [
                              undefined,
                            ]
                  }
            />
            <TextElement
                  style={
                        Array [
                              Object {
                                "color": "white",
                                "fontWeight": "bold",
                                "marginLeft": 15,
                              },
                              undefined,
                              undefined,
                              undefined,
                              undefined,
                            ]
                  }
            >
                  Sign In With Facebook
            </TextElement>
      </View>
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <SocialIcon
        button={true}
        iconColor="white"
        iconSize={24}
        raised={true}
        title="Sign In With Facebook"
        type="facebook"
/>,
      "_debugID": 9,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "button": true,
          "iconColor": "white",
          "iconSize": 24,
          "raised": true,
          "title": "Sign In With Facebook",
          "type": "facebook",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 5,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          disabled={false}
          onLongPress={[Function]}
          onPress={[Function]}
          style={
                    Array [
                              Object {
                                "shadowColor": "rgba(0,0,0, .4)",
                                "shadowOffset": Object {
                                  "height": 1,
                                  "width": 1,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 1,
                              },
                              Object {
                                "alignItems": "center",
                                "borderRadius": 30,
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "margin": 7,
                              },
                              Object {
                                "paddingBottom": 14,
                                "paddingTop": 14,
                              },
                              false,
                              false,
                              Object {
                                "backgroundColor": "#3b5998",
                              },
                              undefined,
                              undefined,
                            ]
          }
          underlayColor="#3b5998"
>
          <View
                    style={
                              Object {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                      }
                    }
          >
                    <Icon
                              allowFontScaling={false}
                              color="white"
                              name="facebook"
                              size={24}
                              style={
                                        Array [
                                                  undefined,
                                                ]
                              }
                    />
                    <TextElement
                              style={
                                        Array [
                                                  Object {
                                                    "color": "white",
                                                    "fontWeight": "bold",
                                                    "marginLeft": 15,
                                                  },
                                                  undefined,
                                                  undefined,
                                                  undefined,
                                                  undefined,
                                                ]
                              }
                    >
                              Sign In With Facebook
                    </TextElement>
          </View>
</View>,
        "_debugID": 10,
        "_renderedOutput": <View
          disabled={false}
          onLongPress={[Function]}
          onPress={[Function]}
          style={
                    Array [
                              Object {
                                "shadowColor": "rgba(0,0,0, .4)",
                                "shadowOffset": Object {
                                  "height": 1,
                                  "width": 1,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 1,
                              },
                              Object {
                                "alignItems": "center",
                                "borderRadius": 30,
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "margin": 7,
                              },
                              Object {
                                "paddingBottom": 14,
                                "paddingTop": 14,
                              },
                              false,
                              false,
                              Object {
                                "backgroundColor": "#3b5998",
                              },
                              undefined,
                              undefined,
                            ]
          }
          underlayColor="#3b5998"
>
          <View
                    style={
                              Object {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                      }
                    }
          >
                    <Icon
                              allowFontScaling={false}
                              color="white"
                              name="facebook"
                              size={24}
                              style={
                                        Array [
                                                  undefined,
                                                ]
                              }
                    />
                    <TextElement
                              style={
                                        Array [
                                                  Object {
                                                    "color": "white",
                                                    "fontWeight": "bold",
                                                    "marginLeft": 15,
                                                  },
                                                  undefined,
                                                  undefined,
                                                  undefined,
                                                  undefined,
                                                ]
                              }
                    >
                              Sign In With Facebook
                    </TextElement>
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <SocialIcon
    button={true}
    iconColor="white"
    iconSize={24}
    raised={true}
    title="Sign In With Facebook"
    type="facebook"
/>,
}
`;

exports[`SocialIcon component should render without issues 1`] = `
ShallowWrapper {
  "complexSelector": ComplexSelector {
    "buildPredicate": [Function],
    "childrenOfNode": [Function],
    "findWhereUnwrapped": [Function],
  },
  "length": 1,
  "node": <View
    disabled={false}
    onLongPress={[Function]}
    onPress={[Function]}
    style={
        Array [
            Object {
              "shadowColor": "rgba(0,0,0, .4)",
              "shadowOffset": Object {
                "height": 1,
                "width": 1,
              },
              "shadowOpacity": 1,
              "shadowRadius": 1,
            },
            Object {
              "alignItems": "center",
              "borderRadius": 30,
              "flexDirection": "row",
              "justifyContent": "center",
              "margin": 7,
            },
            false,
            Object {
              "height": 52,
              "width": 52,
            },
            false,
            Object {
              "backgroundColor": "#00aced",
            },
            undefined,
            undefined,
          ]
    }
    underlayColor="#00aced"
>
    <View
        style={
            Object {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "center",
              }
        }
    >
        <Icon
            allowFontScaling={false}
            color="white"
            name="twitter"
            size={24}
            style={
                Array [
                    undefined,
                  ]
            }
        />
    </View>
</View>,
  "nodes": Array [
    <View
      disabled={false}
      onLongPress={[Function]}
      onPress={[Function]}
      style={
            Array [
                  Object {
                    "shadowColor": "rgba(0,0,0, .4)",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": 1,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 1,
                  },
                  Object {
                    "alignItems": "center",
                    "borderRadius": 30,
                    "flexDirection": "row",
                    "justifyContent": "center",
                    "margin": 7,
                  },
                  false,
                  Object {
                    "height": 52,
                    "width": 52,
                  },
                  false,
                  Object {
                    "backgroundColor": "#00aced",
                  },
                  undefined,
                  undefined,
                ]
      }
      underlayColor="#00aced"
>
      <View
            style={
                  Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      }
            }
      >
            <Icon
                  allowFontScaling={false}
                  color="white"
                  name="twitter"
                  size={24}
                  style={
                        Array [
                              undefined,
                            ]
                  }
            />
      </View>
</View>,
  ],
  "options": Object {},
  "renderer": ReactShallowRenderer {
    "_instance": ShallowComponentWrapper {
      "_calledComponentWillUnmount": false,
      "_compositeType": 2,
      "_context": Object {},
      "_currentElement": <SocialIcon
        button={false}
        iconColor="white"
        iconSize={24}
        raised={true}
        type="twitter"
/>,
      "_debugID": 1,
      "_hostContainerInfo": null,
      "_hostParent": null,
      "_instance": StatelessComponent {
        "_reactInternalInstance": [Circular],
        "context": Object {},
        "props": Object {
          "button": false,
          "iconColor": "white",
          "iconSize": 24,
          "raised": true,
          "type": "twitter",
        },
        "refs": Object {},
        "state": null,
        "updater": Object {
          "enqueueCallback": [Function],
          "enqueueCallbackInternal": [Function],
          "enqueueElementInternal": [Function],
          "enqueueForceUpdate": [Function],
          "enqueueReplaceState": [Function],
          "enqueueSetState": [Function],
          "isMounted": [Function],
          "validateCallback": [Function],
        },
      },
      "_mountOrder": 1,
      "_pendingCallbacks": null,
      "_pendingElement": null,
      "_pendingForceUpdate": false,
      "_pendingReplaceState": false,
      "_pendingStateQueue": null,
      "_renderedComponent": NoopInternalComponent {
        "_currentElement": <View
          disabled={false}
          onLongPress={[Function]}
          onPress={[Function]}
          style={
                    Array [
                              Object {
                                "shadowColor": "rgba(0,0,0, .4)",
                                "shadowOffset": Object {
                                  "height": 1,
                                  "width": 1,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 1,
                              },
                              Object {
                                "alignItems": "center",
                                "borderRadius": 30,
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "margin": 7,
                              },
                              false,
                              Object {
                                "height": 52,
                                "width": 52,
                              },
                              false,
                              Object {
                                "backgroundColor": "#00aced",
                              },
                              undefined,
                              undefined,
                            ]
          }
          underlayColor="#00aced"
>
          <View
                    style={
                              Object {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                      }
                    }
          >
                    <Icon
                              allowFontScaling={false}
                              color="white"
                              name="twitter"
                              size={24}
                              style={
                                        Array [
                                                  undefined,
                                                ]
                              }
                    />
          </View>
</View>,
        "_debugID": 2,
        "_renderedOutput": <View
          disabled={false}
          onLongPress={[Function]}
          onPress={[Function]}
          style={
                    Array [
                              Object {
                                "shadowColor": "rgba(0,0,0, .4)",
                                "shadowOffset": Object {
                                  "height": 1,
                                  "width": 1,
                                },
                                "shadowOpacity": 1,
                                "shadowRadius": 1,
                              },
                              Object {
                                "alignItems": "center",
                                "borderRadius": 30,
                                "flexDirection": "row",
                                "justifyContent": "center",
                                "margin": 7,
                              },
                              false,
                              Object {
                                "height": 52,
                                "width": 52,
                              },
                              false,
                              Object {
                                "backgroundColor": "#00aced",
                              },
                              undefined,
                              undefined,
                            ]
          }
          underlayColor="#00aced"
>
          <View
                    style={
                              Object {
                                        "alignItems": "center",
                                        "flexDirection": "row",
                                        "justifyContent": "center",
                                      }
                    }
          >
                    <Icon
                              allowFontScaling={false}
                              color="white"
                              name="twitter"
                              size={24}
                              style={
                                        Array [
                                                  undefined,
                                                ]
                              }
                    />
          </View>
</View>,
      },
      "_renderedNodeType": 1,
      "_rootNodeID": 0,
      "_topLevelWrapper": null,
      "_updateBatchNumber": null,
      "_warnedAboutRefsInRender": false,
    },
    "getRenderOutput": [Function],
    "render": [Function],
  },
  "root": [Circular],
  "unrendered": <SocialIcon
    button={false}
    iconColor="white"
    iconSize={24}
    raised={true}
    type="twitter"
/>,
}
`;
